Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-10244

LustreError: 201288:0:(osc_page.c:336:osc_page_delete()) ASSERTION( (!(value != ((void *)0)) || (value == opg)) ) failed:

XMLWordPrintable

    • 3
    • 9223372036854775807

      [897316.017924] LustreError: 201288:0:(osc_page.c:336:osc_page_delete()) ASSERTION( (!(value != ((void *)0)) || (value == opg)) ) failed:
      [897316.032399] LustreError: 201288:0:(osc_page.c:336:osc_page_delete()) LBUG
      [897316.040568] Pid: 201288, comm: mitgcmuv
      [897316.041463]
      Call Trace:
      [897316.041597]  [<ffffffffa0b07853>] libcfs_debug_dumpstack+0x53/0x80 [libcfs]
      [897316.042781]  [<ffffffffa0b07df5>] lbug_with_loc+0x45/0xc0 [libcfs]
      [897316.042890]  [<ffffffffa107c296>] osc_page_delete+0x226/0x500 [osc]
      [897316.045165]  [<ffffffffa0be889d>] cl_page_delete0+0x7d/0x210 [obdclass]
      [897316.045347]  [<ffffffffa0beab1e>] cl_page_alloc+0x1ce/0x2e0 [obdclass]
      [897316.045533]  [<ffffffffa0beaca4>] cl_page_find+0x74/0x280 [obdclass]
      [897316.045569]  [<ffffffff8118990a>] ? __inc_zone_page_state+0x2a/0x30
      [897316.045715]  [<ffffffffa0fbd506>] ll_readpage+0x86/0x680 [lustre]
      [897316.045754]  [<ffffffff811781de>] ? lru_cache_add+0xe/0x10
      [897316.045778]  [<ffffffff8116b027>] generic_file_aio_read+0x3b7/0x750
      [897316.045925]  [<ffffffffa0fee124>] vvp_io_read_start+0x484/0x570 [lustre]
      [897316.046133]  [<ffffffffa0bee0c5>] cl_io_start+0x65/0x130 [obdclass]
      [897316.046336]  [<ffffffffa0bf16d5>] cl_io_loop+0xa5/0x190 [obdclass]
      [897316.046444]  [<ffffffffa0f8a031>] ll_file_io_generic+0x601/0xad0 [lustre]
      [897316.046553]  [<ffffffffa0f8ad97>] ll_file_aio_read+0x327/0x3c0 [lustre]
      [897316.046701]  [<ffffffffa0be68e6>] ? cl_env_get+0x1b6/0x280 [obdclass]
      [897316.046825]  [<ffffffffa0f8aefb>] ll_file_read+0xcb/0x1e0 [lustre]
      [897316.046858]  [<ffffffff811dec1c>] vfs_read+0x9c/0x170
      [897316.046936]  [<ffffffffa04693cc>] __krm_relay_vfs_read+0x3c/0xf0 [pxkrm_mod]
      [897316.046956]  [<ffffffff811df76f>] SyS_read+0x7f/0xe0
      [897316.047286]  [<ffffffff81646e52>] tracesys+0xdd/0xe2
      [897316.047303]
      

            bobijam Zhenyu Xu
            bobijam Zhenyu Xu
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: